#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.69])
AC_INIT(libabb, 0.1, 583032753@qq.com)
#AC_CONFIG_SRCDIR([include/abb/net/addr.hpp])
#AC_CONFIG_HEADERS([config.h])
#LT_INIT
AM_INIT_AUTOMAKE(libabb,0.1)
# Checks for programs.
AC_PROG_CXX
AC_PROG_LIBTOOL
# Checks for libraries.

# Checks for header files.
#AC_CHECK_HEADERS([arpa/inet.h fcntl.h memory.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_CHECK_HEADER_STDBOOL
#AC_C_INLINE
#AC_TYPE_UINT16_T

# Checks for library functions.
#AC_CHECK_FUNCS([memmove memset strerror])

AC_OUTPUT(Makefile)
