FILE(GLOB BASE_INCLUDE_FILES "abb/base/*.hpp")
FILE(GLOB NET_INCLUDE_FILES "abb/net/*.hpp")
FILE(GLOB HTTP_INCLUDE_FILES "abb/http/*.hpp")
FILE(GLOB URL_INCLUDE_FILES "abb/url/*.hpp")

INSTALL(FILES ${BASE_INCLUDE_FILES} DESTINATION include/abb/base)
INSTALL(FILES ${NET_INCLUDE_FILES} DESTINATION include/abb/net)
INSTALL(FILES ${HTTP_INCLUDE_FILES} DESTINATION include/abb/http)
INSTALL(FILES ${URL_INCLUDE_FILES} DESTINATION include/abb/url)
